pkg/shell/switcher.less
@mobile-button-size: 56px;

/* Navigation base, used for both desktop & mobile navigation */

.nav-sidebar .dashboard-link:not(.active) a:hover {
    background: rgba(57, 63, 68, 0.5) !important;
}

.nav-item-pf-header {
    color: #fff;
    font-size: 16px;
    margin: 18px 20px 10px 20px;
}

.area-ct-subnav {
    background: #393f44;
    border-right: 1px solid #292e34;
    -webkit-flex: none;
    flex: none;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    flex-direction: column;
    position: relative;
    z-index: 2;
    opacity: 1;

    .list-group {
        border: none;
        margin: 10px 0;
    }

    .list-group-item {
        padding: 0;
        background: inherit;
        border: none;

        &, > a {
            transition: all 300ms;
        }

        &:hover, &:hover > a {
            transition: all 150ms; // Speed up animation on hover
        }

        &:hover,
        &.active {
            /* Move hover & selected above overflow fade */
            z-index: 2;

            a {
                color: #fff;
            }
        }

        &:hover {
            background: rgba(77, 82, 88, 0.5);
        }

        &.active {
            background: #4d5258;

            a {
                font-weight: 600;
            }
        }

        a {
            padding: 10px 15px;
            display: block;
            color: #d1d1d1;
            text-decoration: none;
            transition: all 300ms
        }
    }

    /* Fade start and end of the host menu to indicate more content is available */

    .dropdown-toggle {
        position: relative;
        overflow: visible !important;
    }

    .dropdown-toggle:after,
    &:after {
        content: '';
        display: block;
        position: absolute;
        left: 0;
        right: 0;
        height: 2rem;
        pointer-events: none;
        z-index: 1;
        /* Accomodate scrollbars with margin (IE11 needs 18px; rest are less) */
        margin-right: 18px;
    }

    .dropdown-toggle:after {
        background: linear-gradient(to bottom, #393f44, rgba(57, 63, 68, 0));
        top: 100%;
        margin-top: 1px;
    }

    &:after {
        background: linear-gradient(to top, #393f44, rgba(57, 63, 68, 0));
        bottom: 0;
        height: 4rem;
    }
}

.nav-sidebar > .list-group {
    .dashboard-link {
        display: block;

        &:not(.active) .fa {
            color: #72767b !important;
        }
    }
}


.machine-dropdown {
    position: relative;
    -webkit-flex: none;
    flex: none;

    .dropdown-toggle span {
        font-size: 14px;
    }

    &:after {
        content: "";
        position: absolute;
        margin: 0 10px; // Jut out 5 pixels (15 - 5) on the sides
        left: 0;
        right: 0;
        bottom: 0;
        height: 1px;
        background: #4d5258;
    }
}

.machine-dropdown > .dropdown-toggle span,
.host-apps a {
    overflow: hidden;
    text-overflow: ellipsis;
}

.host-apps {
    -webkit-flex: 1 1 0;
    flex: 1 1 0;
    overflow-x: hidden;
    overflow-y: auto;
    position: relative;
}

.area-ct-content {
    > iframe {
        height: 100%;
    }

    > .curtains-ct {
        position: static !important;
    }
}
/* ... */

